# V7

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  generate_favicon.py  generate_profile.py  pyproject.toml  requirements.txt
docs/: 01-SRS.md  02-PDR.md  03-ADRs.md  04-Estructura.md  04-Structure.md  05-Implementation.md  05-Implemetation.md  06-Deployment.md  07-Subscriptions.md  08-API-Documentation.md  09-Bookmakers-Configuration.md  10-Collaboration-Guide.md  USER-GUIDE-Configuration.md
docs/ADRs/: ADR-016-Subscriptions.md
legacy/: RetadorV6.py
migrations/: 001_create_customers.sql  002_create_service_plans.sql  003_create_subscriptions.sql  004_create_telegram_channels.sql  005_create_plan_payment_prices.sql  006_create_payment_accounts.sql
scripts/: process_logos.py  run.py
src/: __init__.py
src/application/: __init__.py
src/application/dto/: __init__.py  pick_dto.py
src/application/handlers/: __init__.py  pick_handler.py
src/config/: __init__.py  bookmakers.py  logging_config.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  bookmaker.py  pick.py  surebet.py
src/domain/rules/: __init__.py  validation_chain.py
src/domain/services/: __init__.py  calculation_service.py  opposite_market_service.py
src/domain/value_objects/: __init__.py  market_type.py  odds.py  profit.py
src/infrastructure/: __init__.py
src/infrastructure/api/: __init__.py  rate_limiter.py  surebet_client.py
src/infrastructure/cache/: __init__.py  local_cache.py
src/infrastructure/messaging/: __init__.py  message_formatter.py  pick_router.py  telegram_gateway.py
src/infrastructure/repositories/: __init__.py  _postgres_repository.py  base.py  redis_repository.py
src/shared/: __init__.py  constants.py  exceptions.py
src/subscriptions/: __init__.py
src/web/: __init__.py  app.py  i18n.py
src/web/routes/: __init__.py  (+2 more)
tests/integration/: conftest.py  test_api_client.py  test_messaging.py  test_redis_repository.py
(+77 files in other folders)
